--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "getsub-core",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "getsub core library",
-  "main": "lib/~.js",
+  "main": "lib/getsub-core.js",
   "scripts": {
     "start": "npm run dev",
     "dev": "node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.dev.config.js",
