--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/kooparse/getsub-core#readme",
   "dependencies": {
+    "addic7ed-api": "^1.3.1",
     "babel-runtime": "^6.9.2",
     "fuse.js": "^2.4.1",
+    "imdb-api": "^2.0.0",
     "node-uuid": "^1.4.7",
     "opensubtitles": "0.0.4"
   },
@@ -45,6 +47,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "json-loader": "^0.5.4",
     "pre-commit": "^1.1.3",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-node-externals": "^1.3.3"
   }
 }
